--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -63,9 +63,9 @@
                             nombreCompleto += " " + ViewBag.Participante.apellido_2;
                         }
                         <tr>
-                            <td class="titulo-listas">@ViewBag.Participante.idParticipante</td>
-                            <td class="titulo-listas">@nombreCompleto</td>
-                            <td class="titulo-listas">
+                            <td class=" ">@ViewBag.Participante.idParticipante</td>
+                            <td class=" ">@nombreCompleto</td>
+                            <td class=" ">
                                 @if (ViewBag.ListaGrupos != null)
                                 {
                                     foreach (var grupo in ViewBag.ListaGrupos)
@@ -78,7 +78,7 @@
                                     <span>Sin grupos inscritos</span>
                                 }
                             </td>
-                            <td class="titulo-listas text-center">
+                            <td class="  text-center">
                                 @if (ViewBag.ListaGrupos != null)
                                 {
                                     foreach (var grupo in ViewBag.ListaGrupos)
@@ -91,13 +91,13 @@
                                     <span>0</span>
                                 }
                             </td>
-                            <td class="titulo-listas text-center">
+                            <td class="  text-center">
                                 <span>@ViewBag.Participante.horasMatriculadas</span>
                             </td>
-                            <td class="titulo-listas text-center">
+                            <td class="  text-center">
                                 <span>@ViewBag.Participante.horasAprobadas</span>
                             </td>
-                            <td class="titulo-listas">
+                            <td class=" ">
                             </td>
                         </tr>
                     </tbody>
