--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -89,15 +89,15 @@
                                 }
 
                                 <tr>
-                                    <td class="titulo-listas">@asesor.identificacion</td>
-                                    <td class="titulo-listas">@nombreCompleto</td>
-                                    <td class="titulo-listas">@asesor.descripcion</td>
-                                    <td class="titulo-listas">@asesor.telefonos</td>
-                                    <td class="titulo-listas">
-                                        @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.identificacion }, new { @class = "btn btn-outline-info bi bi-pencil-square" })
+                                    <td>@asesor.identificacion</td>
+                                    <td>@nombreCompleto</td>
+                                    <td>@asesor.descripcion</td>
+                                    <td>@asesor.telefonos</td>
+                                    <td>
+                                        @Html.ActionLink(" ", "EditarAsesor", "Asesor", new { idAsesor = asesor.identificacion }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
                                     </td>
-                                    <td class="titulo-listas">
-                                        <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.identificacion')">
+                                    <td>
+                                        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@asesor.identificacion')">
                                             <i class="bi bi-trash"></i>
                                         </button>
                                     </td>
