--- a/webMetics/Views/Categoria/ListaCategorias.cshtml
+++ b/webMetics/Views/Categoria/ListaCategorias.cshtml
@@ -63,19 +63,19 @@
                             @foreach (var categoria in ViewBag.Categorias)
                             {
                                 <tr data-toggle="collapse" data-target="#demo1" class="accordion-toggle">
-                                    <td class="titulo-listas">@categoria.nombre</td>
-                                    <td class="titulo-listas">@categoria.descripcion</td>
-                                    <td class="titulo-listas">
+                                    <td>@categoria.nombre</td>
+                                    <td>@categoria.descripcion</td>
+                                    <td>
                                         @Html.ActionLink("Temas", "MostrarTemas", "Tema",
           new { nombre = categoria.nombre },
           new { @class = "btn btn-primary", @onclick = "" })
                                     </td>
-                                    <td class="titulo-listas">
+                                    <td class=" ">
                                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModal('@categoria.nombre')">
                                             Editar
                                         </button>
                                     </td>
-                                    <td class="titulo-listas">
+                                    <td class=" ">
                                         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@categoria.nombre')">
                                             Eliminar
                                         </button>
