--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -55,7 +55,7 @@
                                 @using (Html.BeginForm("ExportarParticipantesPDF", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
                                 {
                                     @Html.AntiForgeryToken()
-                                    <button type="submit" id="btnSubmit" class="btn btn-info" value="Export">
+                                    <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
                                         <i class="bi bi-download me-1"></i>
                                         PDF
                                     </button>
@@ -65,7 +65,7 @@
                                 @using (Html.BeginForm("ExportarParticipantesExcel", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
                                 {
                                     @Html.AntiForgeryToken()
-                                    <button type="submit" id="btnSubmit" class="btn btn-info" value="Export">
+                                    <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
                                         <i class="bi bi-download me-1"></i>
                                         Excel
                                     </button>
@@ -75,7 +75,7 @@
                                 @using (Html.BeginForm("ExportarParticipantesWord", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
                                 {
                                     @Html.AntiForgeryToken()
-                                    <button type="submit" id="btnSubmit" class="btn btn-info" value="Export">
+                                    <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
                                         <i class="bi bi-download me-1"></i>
                                         Word
                                     </button>
@@ -111,19 +111,19 @@
                                     nombreCompleto += " " + participante.apellido_2;
                                 }
                                 <tr>
-                                    <td class="titulo-listas">@participante.idParticipante</td>
-                                    <td class="titulo-listas">@nombreCompleto</td>
-                                    <td class="titulo-listas">@participante.condicion</td>
-                                    <td class="titulo-listas">@participante.unidadAcademica</td>
-                                    <td class="titulo-listas">@participante.correo</td>
-                                    <td class="titulo-listas">@participante.telefonos</td>
-                                    <td class="titulo-listas">
-                                        @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-info bi bi-search" })
+                                    <td>@participante.idParticipante</td>
+                                    <td>@nombreCompleto</td>
+                                    <td>@participante.condicion</td>
+                                    <td>@participante.unidadAcademica</td>
+                                    <td>@participante.correo</td>
+                                    <td>@participante.telefonos</td>
+                                    <td>
+                                        @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-primary bi bi-search" })
                                     </td>
                                     @if (ViewBag.Role == 1)
                                     {
-                                        <td class="titulo-listas">
-                                            <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
+                                        <td class=" ">
+                                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
                                                 <i class="bi bi-trash"></i>
                                             </button>
                                         </td>
