--- a/webMetics/Views/Tema/MostrarTemas.cshtml
+++ b/webMetics/Views/Tema/MostrarTemas.cshtml
@@ -52,11 +52,11 @@
                             @foreach (var tema in ViewBag.Temas)
                             {
                                 <tr>
-                                    <td class="titulo-listas">@tema.nombre</td>
-                                    <td class="titulo-listas">@tema.tipoActividad</td>
-                                    <td class="titulo-listas">@tema.asesorPrincipal</td>
-                                    <td class="titulo-listas">@tema.asesores</td>
-                                    <td class="titulo-listas">
+                                    <td>@tema.nombre</td>
+                                    <td>@tema.tipoActividad</td>
+                                    <td>@tema.asesorPrincipal</td>
+                                    <td>@tema.asesores</td>
+                                    <td>
                                         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@tema.idTema')">
                                             Eliminar
                                         </button>
