--- a/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
+++ b/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
@@ -57,15 +57,15 @@
                             @foreach (var tipoActividad in ViewBag.TiposActividad)
                             {
                                 <tr>
-                                    <td class="titulo-listas">@tipoActividad.nombre</td>
-                                    <td class="titulo-listas">@tipoActividad.descripcion</td>
-                                    <td class="titulo-listas">
+                                    <td>@tipoActividad.nombre</td>
+                                    <td>@tipoActividad.descripcion</td>
+                                    <td>
                                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModal('@tipoActividad.nombre')">
                                             Editar
                                         </button>
                                     </td>
-                                    <td class="titulo-listas">
-                                    <td class="titulo-listas">
+                                    <td>
+                                    <td>
                                         <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@tipoActividad.nombre')">
                                             Eliminar
                                         </button>
