--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -60,10 +60,9 @@
                                         <input type="file" class="form-control" name="file" id="file">
                                         <input class="btn btn-info ms-2" type="submit" value="Subir archivo">
 
-                                        <input type="hidden" name="idGrupo" id="idGrupo" value="ViewBag.IdGrupo">
+                                        <input type="hidden" name="idGrupo" id="idGrupo" value="@ViewBag.IdGrupo">
                                     </div>
                                 </form>
-
                             }
                         </div>
 
