--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -95,9 +95,7 @@
                                         @Html.ActionLink(" ", "EditarParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
                                     </td>
                                     <td>
-                                        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante')">
-                                            <i class="bi bi-trash"></i>
-                                        </button>
+                                        <i class="btn btn-outline-danger bi bi-trash" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar(@participante.idParticipante)"></i>
                                     </td>
                                 </tr>
                             }
@@ -114,7 +112,25 @@
     <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Eliminar participante</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro de que desea eliminar este participante?
 
+                    @using (Html.BeginForm("EliminarParticipante", "Participante"))
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="modal-footer">
+                            <input type="hidden" id="valueParticipanteEliminar" name="idParticipante">
+                            <input type="submit" class="btn btn-primary" value="Aceptar" onclick="" />
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+
+                        </div>
+                    }
+                </div>
             </div>
         </div>
     </div>
@@ -122,23 +138,7 @@
 </html>
 
 <script type="text/javascript">
-    function actualizarModal(idParticipante) {
-        $.ajax({
-            type: "POST",
-            url: "/Participante/DisplayModal",
-            data: '{idParticipante: "' + idParticipante + '" }',
-            contentType: "application/json; charset=utf-8",
-            dataType: "html",
-            success: function (response) {
-                $("#modalEliminar").find(".modal-content").html(response);
-                $("#modalEliminar").modal('show');
-            },
-            failure: function (response) {
-                alert(response.responseText);
-            },
-            error: function (response) {
-                alert(response.responseText);
-            }
-        });
+    function actualizarModalEliminar(idParticipante) {
+        document.getElementById("valueParticipanteEliminar").value = idParticipante;
     }
 </script>
