--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -149,7 +149,7 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
     }
 </body>
 </html>
