--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -150,7 +150,7 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
     }
     </body>
 </html>
