--- a/webMetics/Views/Participante/ObtenerParticipante.cshtml
+++ b/webMetics/Views/Participante/ObtenerParticipante.cshtml
@@ -26,7 +26,7 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
     }
     </body>
 </html>
