--- a/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
+++ b/webMetics/Views/TipoActividad/ListaTiposActividad.cshtml
@@ -137,7 +137,7 @@
     }
     else
     {
-        await Html.RenderPartialAsync("~/Views/Login/Login.cshtml");
+        await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
     }
     </body>
 </html>
