Se habilita la creación de grupos.

--- a/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
+++ b/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
@@ -73,7 +73,7 @@
                     </table>
                 }
                 <div class="d-flex justify-content-center">
-                    @Html.ActionLink("Cancelar", "VerCalificaciones", "Calificaciones", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                    @Html.ActionLink("Cancelar", "VerCalificaciones", "Calificaciones", new { }, new { @class = "btn btn-secondary btn-block" })
                 </div>
             </div>
         </div>
