--- a/webMetics/Views/Categoria/CrearCategoria.cshtml
+++ b/webMetics/Views/Categoria/CrearCategoria.cshtml
@@ -55,7 +55,7 @@
                     </div>
                     <div class="row justify-content-center m-4">
                         <div class="col-auto">
-                            @Html.ActionLink("Cancelar", "ListaCategorias", "Categoria", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            @Html.ActionLink("Cancelar", "ListaCategorias", "Categoria", new { }, new { @class = "btn btn-secondary btn-block" })
                         </div>
                         <div class="col-auto">
                             <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
