--- a/webMetics/Views/Tema/MostrarTemas.cshtml
+++ b/webMetics/Views/Tema/MostrarTemas.cshtml
@@ -31,7 +31,7 @@
                         new { @class = "btn btn-primary" })
                         @Html.ActionLink("Volver", "ListaCategorias", "Categoria",
                         new { },
-                        new { @class = "btn boton-secondary", @style = "background-color:grey" })
+                        new { @class = "btn boton-secondary" })
                     </div>
                 }
                 else
