--- a/webMetics/Views/TipoActividad/EditarTipoActividad.cshtml
+++ b/webMetics/Views/TipoActividad/EditarTipoActividad.cshtml
@@ -47,7 +47,7 @@
                 <div class="row justify-content-center" style="margin-top:20px">
                     @Html.ActionLink("Cancelar", "ListaTiposActividad",
                     new { },
-                    new { @class = "btn boton-formularios", @style = "background-color:grey" })
+                    new { @class = "btn boton-formularios" })
                     <input type="submit" class="btn btn-primary boton-formularios" value="Guardar" />
                 </div>
             </div>
