--- a/webMetics/Views/Asesor/AgregarAsesor.cshtml
+++ b/webMetics/Views/Asesor/AgregarAsesor.cshtml
@@ -95,7 +95,7 @@
                     </div>
                     <div class="row justify-content-center m-4">
                         <div class="col-auto">
-                            @Html.ActionLink("Cancelar", "ListaAsesores", "Asesor", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            @Html.ActionLink("Cancelar", "ListaAsesores", "Asesor", new { }, new { @class = "btn btn-secondary btn-block"} )
                         </div>
                         <div class="col-auto">
                             <input type="submit" class="btn btn-primary btn-block" value="Guardar"/>
@@ -104,10 +104,6 @@
                 </div>
             </div>
         }
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-        <script src="~/Scripts/validate.es.js"></script>
-        <script src="//ajax.aspnetcdn.com/ajax/mvc/4.0/jquery.validate.unobtrusive.min.js"></script>
     }
     else
     {
