--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -137,7 +137,7 @@
                         </div>
                         <div class="row justify-content-center m-4">
                             <div class="col-auto">
-                                @Html.ActionLink("Cancelar", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                                @Html.ActionLink("Cancelar", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "btn btn-secondary btn-block" })
                             </div>
                             <div class="col-auto">
                                 <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
