--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -3,9 +3,7 @@
     Aqui se encuentra el Header y Footer del sitio web que se comparte para cada vista del sitio
 //-->
 @using webMetics.Controllers
-@{
 
-}
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,85 +21,65 @@
         <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
     </div>
 
-    <style>
-        .navbar-custom {
-            background: #f4f4f4;
-        }
-
-        .navbar-dark .navbar-text {
-            color: black;
-        }
-
-        .dropdown-item:hover {
-            color: black !important;
-            background-color: lightgray !important;
-        }
-    </style>
-    @if (ViewBag.Title != "Iniciar sesión" || ViewBag.Title != "Registrarse")
+    @if (ViewBag.Id != "")
     {
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
-                        <!-- Avatar -->
-                        @{
-                            if (ViewBag.Id != "")
-                            {
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
-                                       role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <img src="~/images/avatar.png" class="rounded-circle"
-                                             height="22" alt="Avatar" loading="lazy" />
-                                    </a>
 
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <li>
-                                            @Html.ActionLink("Mi usuario", "MiUsuario", "Participante", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
-                                        </li>
-                                        <li>
-                                            @Html.ActionLink("Mi contraseña", "GestionarContrasena", "Usuario", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
-                                        </li>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li>
-                                            @Html.ActionLink("Cerrar sesión", "CerrarSesion", "Usuario", new { }, new { @class = "dropdown-item" })
-                                        </li>
-                                    </ul>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
+                               role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="bi bi-person-circle"></i>
+                            </a>
+
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    @Html.ActionLink("Mi usuario", "MiUsuario", "Participante", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
                                 </li>
-                            }
-                        }
+                                <li>
+                                    @Html.ActionLink("Mi contraseña", "GestionarContrasena", "Usuario", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
+                                </li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    @Html.ActionLink("Cerrar sesión", "CerrarSesion", "Usuario", new { }, new { @class = "dropdown-item" })
+                                </li>
+                            </ul>
+                        </li>
 
                         @if (ViewBag.Role == 1)
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Funciones admin</a>
+                                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrador</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/TipoActividad/ListaTiposActividad">Tipos de actividad</a>
-                                    <a class="dropdown-item" href="/Categoria/ListaCategorias">Categorías</a>
-                                    <a class="dropdown-item" href="/Asesor/ListaAsesores">Asesores</a>
-                                    <a class="dropdown-item" href="/Participante/VerParticipantes">Participantes</a>
-                                    <a class="dropdown-item" href="/Tema/CrearTema">Crear tema</a>
-                                    <a class="dropdown-item" href="/Grupo/AgregarGrupo">Crear grupo</a>
+                                    @Html.ActionLink("Tipos de actividad", "ListaTiposActividad", "TipoActividad", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Categorías", "ListaCategorias", "Categoria", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Lista de asesores", "ListaAsesores", "Asesor", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Lista de participantes", "VerParticipantes", "Participante", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un tema", "CrearTema", "Tema", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
                                 </div>
                             </li>
                         }
                         @if (ViewBag.Role == 2)
                         {
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Funciones asesor</a>
+                                <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Asesor</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/Grupo/ListaGruposDisponibles">Mis grupos</a>
-                                    <a class="dropdown-item" href="/Grupo/AgregarGrupo">Crear grupo</a>
+                                    @Html.ActionLink("Mis módulos", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Crear un módulo", "CrearGrupo", "Grupo", new { }, new { @class = "dropdown-item" })
                                 </div>
                             </li>
                         }
 
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Home/Index">
-                                Inicio
-                            </a>
+                            @Html.ActionLink(" ", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "nav-link active bi bi-house-door-fill" })
                         </li>
                     </ul>
                 </div>
