--- a/webMetics/Views/Tema/CrearTema.cshtml
+++ b/webMetics/Views/Tema/CrearTema.cshtml
@@ -74,7 +74,7 @@
 
                         <div class="row justify-content-center m-4">
                             <div class="col-auto">
-                                @Html.ActionLink("Cancelar", "Index", "Home", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                                @Html.ActionLink("Cancelar", "Index", "Home", new { }, new { @class = "btn btn-secondary btn-block" })
                             </div>
                             <div class="col-auto">
                                 <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
