--- a/webMetics/Views/Usuario/Registrarse.cshtml
+++ b/webMetics/Views/Usuario/Registrarse.cshtml
@@ -62,7 +62,7 @@
                     </div>
                     <div class="row justify-content-center m-4">
                         <div class="col-auto">
-                            @Html.ActionLink("Cancelar", "IniciarSesion", "Usuario", new { }, new { @class = "btn btn-secondary btn-block", @style = "background-color:grey" })
+                            @Html.ActionLink("Cancelar", "IniciarSesion", "Usuario", new { }, new { @class = "btn btn-secondary btn-block" })
                         </div>
                         <div class="col-auto">
                             <input type="submit" class="btn btn-primary btn-block" value="Guardar"/>
