Habilitada función de registrarse.

--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -9,6 +9,7 @@
     <div class="form-horizontal">
         <h1 class="mt-5">@ViewBag.Title</h1>
         <h5>Inserte los siguientes datos:</h5>
+        <h6 style="color:red"> * Son campos obligatorios</h6>
         <hr />
 
         @if (ViewBag.ErrorMessage != null)
