--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
     </div>
 
-    @if (ViewBag.Id != "")
+    @if (ViewBag.Id != "" && ViewBag.Title != "Registrarse" && ViewBag.Title != "Iniciar sesión")
     {
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
