Refactoring de métodos para manejar usuarios y participantes.

--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -39,7 +39,7 @@
             <div class="table-responsive">
                 @if (ViewBag.ListaParticipantes == null)
                 {
-                    <h5 class="text-center">No hay personas inscritas en ningún grupo.</h5>
+                    <h5 class="text-center">No hay personas inscritas en ningún módulo.</h5>
                 }
                 else
                 {
